             
SET(CMAKE_VERBOSE_MAKEFILE,True)

#9886 673407
#9739 195133

ADD_DEFINITIONS(-g)
#ADD_DEFINITIONS(-DYYSTYPE=CAst::CAst*)
YACC_TARGET(cYacc c.y ${CMAKE_CURRENT_BINARY_DIR}/cYacc.cpp GENERATOR_FLAGS "-y -d -g" )
FLEX_TARGET(cLex c.l ${CMAKE_CURRENT_BINARY_DIR}/cLex.c)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_LIBRARY(cYacc ${YACC_cYacc_OUTPUTS} )
ADD_LIBRARY(cFlex ${FLEX_cLex_OUTPUTS} )
SET_TARGET_PROPERTIES(cYacc PROPERTIES COMPILE_FLAGS "-include CAst.h -DYYSTYPE=CAst::CAst*")
ADD_EXECUTABLE(CAst CAst_main.cpp CAst.cpp )
TARGET_LINK_LIBRARIES(CAst cYacc cFlex)

SET_TARGET_PROPERTIES(CAst PROPERTIES COMPILE_FLAGS "-DYYSTYPE=CAst::CAst*")
