             
SET(CMAKE_VERBOSE_MAKEFILE,True)

#9886 673407
#9739 195133

INCLUDE(FindPythonLibs)


ADD_DEFINITIONS(-g)
#ADD_DEFINITIONS(-DYYSTYPE=CAst::CAst*)
BISON_TARGET(cYacc c.y ${CMAKE_CURRENT_BINARY_DIR}/cYacc.cpp COMPILE_FLAGS "-y -d -g" )
FLEX_TARGET(cLex c.l ${CMAKE_CURRENT_BINARY_DIR}/cLex.cpp)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_LIBRARY(cYacc ${BISON_cYacc_OUTPUTS} )
ADD_LIBRARY(cFlex ${FLEX_cLex_OUTPUTS} )
ADD_LIBRARY(cCAst CAst.cpp)
SET_TARGET_PROPERTIES(cYacc PROPERTIES COMPILE_FLAGS "-include CAst.h")
SET_TARGET_PROPERTIES(cFlex PROPERTIES COMPILE_FLAGS "-include CAst.h")

TARGET_LINK_LIBRARIES(cCAst cYacc cFlex)
ADD_EXECUTABLE(CAst CAst_main.cpp)# ${BISON_cYacc_OUTPUTS} ${FLEX_cLex_OUTPUTS} )

TARGET_LINK_LIBRARIES(CAst cCAst)
SET_TARGET_PROPERTIES(CAst PROPERTIES COMPILE_FLAGS "-include CAst.h") 



ADD_LIBRARY(PyCAst SHARED CAst.py.cpp )
SET_TARGET_PROPERTIES(PyCAst PROPERTIES COMPILE_FLAGS "-I ${PYTHON_INCLUDE_DIRS} -include CAst.h -g" ) 
TARGET_LINK_LIBRARIES(PyCAst cCAst)


