SET(CMAKE_VERBOSE_MAKEFILE,True)

#9886 673407
#9739 195133

FILE(GLOB_RECURSE CHEETAH_FILES yaccClasses2 *.tmplc)
FILE(GLOB_RECURSE PYTHON_FILES yaccClasses2 *.py)

ADD_CUSTOM_COMMAND(
	OUTPUT 	${CMAKE_CURRENT_BINARY_DIR}/c.y 
		${CMAKE_CURRENT_BINARY_DIR}/CAst.py.cpp  
		${CMAKE_CURRENT_BINARY_DIR}/CAst.py.h 
		${CMAKE_CURRENT_BINARY_DIR}/CAst.h  
		${CMAKE_CURRENT_BINARY_DIR}/CAst.cpp 
	COMMAND python -m yaccClasses2 -t tokMap -i c.y.input -o ${CMAKE_CURRENT_BINARY_DIR}/c -py ${CMAKE_CURRENT_BINARY_DIR}/CAst -c ${CMAKE_CURRENT_BINARY_DIR}/CAst 
	MAIN_DEPENDENCY c.y.input 
	DEPENDS c.l ${CHEETAH_FILES} ${PYTHON_FILES}
	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)



INCLUDE(FindPythonLibs)


ADD_DEFINITIONS(-g)
#ADD_DEFINITIONS(-DYYSTYPE=CAst::CAst*)
BISON_TARGET(cYacc ${CMAKE_CURRENT_BINARY_DIR}/c.y ${CMAKE_CURRENT_BINARY_DIR}/cYacc.cpp COMPILE_FLAGS "-y -d -g" )
FLEX_TARGET(cLex c.l ${CMAKE_CURRENT_BINARY_DIR}/cLex.cpp)

#ADD_DEPENDENCIES(cYacc YACCCLASSES2)
#ADD_DEPENDENCIES(cLex YACCCLASSES2)


ADD_FLEX_BISON_DEPENDENCY(cLex cYacc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_LIBRARY(cYacc ${BISON_cYacc_OUTPUTS} )
ADD_LIBRARY(cFlex ${FLEX_cLex_OUTPUTS} )
ADD_LIBRARY(cCAst CAst.cpp)
SET_TARGET_PROPERTIES(cYacc PROPERTIES COMPILE_FLAGS "-include CAst.h -fPIC")
SET_TARGET_PROPERTIES(cFlex PROPERTIES COMPILE_FLAGS "-include CAst.h -fPIC")
SET_TARGET_PROPERTIES(cCAst PROPERTIES COMPILE_FLAGS "-fPIC")

TARGET_LINK_LIBRARIES(cCAst cYacc cFlex)
ADD_EXECUTABLE(CAst CAst_main.cpp)# ${BISON_cYacc_OUTPUTS} ${FLEX_cLex_OUTPUTS} )



ADD_EXECUTABLE(Paths_test Paths_test.cpp)

TARGET_LINK_LIBRARIES(CAst cCAst)
SET_TARGET_PROPERTIES(CAst PROPERTIES COMPILE_FLAGS "-include CAst.h -fPIC") 



ADD_LIBRARY(PyCAst SHARED CAst.py.cpp )
TARGET_LINK_LIBRARIES(PyCAst cCAst)

IF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
  SET_TARGET_PROPERTIES(PyCAst PROPERTIES COMPILE_FLAGS "-fPIC -I ${PYTHON_INCLUDE_DIRS} -include CAst.h" )
ELSE( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )
  SET_TARGET_PROPERTIES(PyCAst PROPERTIES COMPILE_FLAGS "-I ${PYTHON_INCLUDE_DIRS} -include CAst.h -g" ) 
ENDIF( CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" )


